--- a/InicioSesion.html
+++ b/InicioSesion.html
@@ -18,7 +18,7 @@
     <body>
     <section>
         <div class="row g-0">
-            <div class="col-lg-7">
+            <div class="col-lg-7 d-none d-lg-block">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
